src/test/deca/syntax/valid/notprovided/and.deca
{
int x=1;
if(x==2 || 2>3){
x=4;
}
}