src/test/deca/syntax/invalid/test_synt30.deca
//Resultat:
//      Erreur syntaxique : ligne 2
{
int x="hello" "hello" ;
}